css/index.css
/* ... */
@font-face {
      font-family: FivoBold;
      src: url(../fonts/FivoSansModern/FivoSansModern-Bold.otf);
}

@font-face {
      font-family: FivoHeavy;
      src: url(../fonts/FivoSansModern/FivoSansModern-Heavy.otf);
}

@font-face {
      font-family: FivoBlack;
      src: url(../fonts/FivoSansModern/FivoSansModern-ExtBlack.otf);
}

@font-face {
      font-family: FivoRegular;
      src: url(../fonts/FivoSansModern/FivoSansModern-Regular.otf);
}

/* grid layout */
.grid-container {
      display: grid; 
      grid-template-columns: 1fr 1fr 3fr 3fr 1fr 1fr; 
      grid-template-rows: 2fr 1fr 3fr 3fr 1fr 1fr; 
      align-items: center;
}

/* .area-base {
      grid-area: base;
} */

.main-text {
      grid-area: 3 / 3 / 5 / 5;
      width: 100%;
      height: 100%;
      display: flex;
      flex-direction: column;
      /* background-color: var(--primary-highlight); */
      justify-content: center;
      align-items: center;
      font-family: AvaraBlackItalic;
      color: var(--primary-highlight);
      transform: translateY(1.5rem);
}

.canvas {
      grid-area: 3 / 3 / 5 / 5;
      overflow: hidden;
      display: flex;
      flex-direction: column;
      /* background-color: var(--primary-highlight); */
      justify-content: center;
      align-items: center;
      width: 100%;
      height: 100%;
}

.snap {
      scroll-snap-type: proximity;
}

.caps {
      font-family: Typefesse;
}

/* .area3-base {
      grid-area: 2/2/3/4;
} */

/* .title-text-container { 
      font-family: RegloBold;
      color: var(--gradient-2);
      width: 100%;
      height: 100%;
} */

.vertical-center-container {
      z-index: 95;
      width: 100%;
}

.fit-text {
      margin-top: 0;
      padding-top: 0;
      line-height: 1.0;
      margin: auto;
}

#canvas-1 {
      width: 100%;
      height: 100%;
      z-index: 96;
}
#image-fp-under {
      object-fit: contain;
      z-index: 95;
      max-height: 80% ;
      max-width: 80%;
      transform: translateX(20%);
      pointer-events: none;
      will-change: transform;
}
#image-fp-over {
      object-fit: contain;
      z-index: 97;
      max-height: 90% ;
      transform: translate(10%, 20%);
      pointer-events: none;
      will-change: transform;
}
#image-fp-bg {
      grid-area: 2 / 2 / 6 / 6;
      width: 100%;
      height: 100%;
      background-color: black;
      border-radius: 20px;
      border: solid 1px black;
}

.scroll-text {
      grid-area: 5 / 4 / 6 / 5;
      font-family: FivoRegular;
      font-size: 1.5rem;
      text-align: right;
      margin: 0;
      z-index: 97;
      margin-bottom: 4rem;
      color: var(--primary-highlight)
}
    

.grid-item{
      transition: 500ms ease-out;
      cursor: pointer;
      background-color: white;
}

.grid-outlined{
      border: 1px solid black;
}

.grid-item:hover {
      background-color: transparent;
}

/* sizing layouts */

.fw{
      width: 100vw;
}

.fh{
      height: 100vh;
}

.flex-col-center {
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      padding: 1rem;
}

.outline {
      border: solid 1px black;
}

/* universal callouts */
html {
      padding: 0;
      margin: 0;
      scroll-behavior: smooth;
}

body{
      padding: 0;
      margin: 0;
      background-color: var(--primary-background);
      overflow: hidden scroll;
      overscroll-behavior: none;
      scrollbar-width: 0;
}

body::-webkit-scrollbar{
      -webkit-appearance: none;
      width: 0;
      height: 0;
}

/* navbar elements */

#navbar {
      width: 100%;
      margin-top: 0;
      position: fixed;
      background-color: transparent;
      pointer-events: none;
      z-index: 97;
}

#title-name-text {
      position: relative;
      display: grid;
      grid-template-columns: 1fr 1fr;
      flex-direction: row;
      font-family: FivoHeavy;
      font-size: 3rem;
      /* text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000; */
      margin-left: auto;
      margin-right: auto;
      padding: 0;
      margin-bottom: 0.2rem;
      width: auto;
      text-align: center;
      user-select: none;
      -webkit-user-select: none;
      z-index: 0;
      background-color: transparent;
      color: white;
}

.title-text-letter {
      mix-blend-mode: difference;
}

#split-left {
      text-align: right;
}

#split-right {
      text-align: left;
}

.pe{
      pointer-events: all;
}

.hover-after {
      cursor: pointer;
}

#switch {
      position: relative;
      user-select: none;
      -webkit-user-select: none;
      display: inline-block;
      margin-bottom: 0;
      width: auto;
      font-family: FivoHeavy;
      color: var(--primary-highlight);
      transform-origin: 50% 40%;
}

#switch::after{
      position: absolute;
      height: 100%;
      width: 100%;
      transition: all 150ms ease-out;
      border: solid 1px transparent;
      border-radius: 100%;
      left: 50%;
      transform: translate(-50%, -10%);
      content:'';
      z-index: 99;
}

.hover-after:hover #switch::after {
      border-color: var(--primary-highlight);
}

.collapse {
      user-select: none;
      -webkit-user-select: none;
      display: inline-block;
      content-visibility: auto;
      white-space: nowrap;
      vertical-align: top;
      width: auto;
      transform-origin: center;
      /* transition: all 400ms ease-out; */
      /* height: fit-content;
      max-width: 100%;
      max-height: 100%; */
}

.uncollapse {
      user-select: none;
      -webkit-user-select: none;
      display: inline-block;
      content-visibility: auto;
      white-space: nowrap;
      vertical-align: top;
      transform-origin: center;
      /* transform: scaleX(0); */
      width: 0;
      /* transition: all 400ms ease-out 100ms; */
      /* height: fit-content;
      max-height: 0; */
}
/* ... */

